--- a/Movied/app/src/main/res/values/strings.xml
+++ b/Movied/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="create_account">Create Account</string>
     <string name="already_have_an_account">Already have an account ?</string>
     <string name="login">Login</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="favorite">Favorite</string>
+    <string name="profile">Profile</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
