--- a/Movied/app/src/main/res/values/strings.xml
+++ b/Movied/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="favorite">Favorite</string>
     <string name="profile">Profile</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_guest">Hello, Guest</string>
+    <string name="welcome_to">Welcome to</string>
 </resources>
