--- a/Movied/app/src/main/res/values/strings.xml
+++ b/Movied/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_guest">Hello, Guest</string>
     <string name="welcome_to">Welcome to</string>
+    <string name="release_date">Release Date</string>
+    <string name="december_9_2017">December 9, 2017</string>
+    <string name="genre">Genre</string>
+    <string name="overview">Overview</string>
+    <string name="cast">Cast</string>
+    <string name="related_movie">Related Movie</string>
 </resources>
