create favorite menu and fix many more

--- a/Movied/app/src/main/res/values/strings.xml
+++ b/Movied/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="related_movie">Related Movie</string>
     <string name="find_your_movie">Find your movie</string>
     <string name="movie_not_found">Movie not found</string>
+    <string name="favorite_empty">Favorite empty</string>
 </resources>
