--- a/Movied/app/src/main/res/values/strings.xml
+++ b/Movied/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="find_your_movie">Find your movie</string>
     <string name="movie_not_found">Movie not found</string>
     <string name="favorite_empty">Favorite empty</string>
+    <string name="username_not_valid">Username not valid</string>
+    <string name="email_not_valid">Email not valid</string>
+    <string name="password_not_valid">Password not valid</string>
+    <string name="password_not_same">Password not same</string>
 </resources>
