--- a/Movied/app/src/main/res/values/strings.xml
+++ b/Movied/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
     <string name="email_not_valid">Email not valid</string>
     <string name="password_not_valid">Password not valid</string>
     <string name="password_not_same">Password not same</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="logout">Logout</string>
+    <string name="update">Update</string>
 </resources>
