--- a/Movied/favorite/src/main/res/values/strings.xml
+++ b/Movied/favorite/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_favorite">Favorite</string>
+    <string name="favorite_empty">Favorite empty</string>
 </resources>
